@@ -49,10 +49,10 @@ for (@ARGV) {
     s/\"$//;
 }
 
-my $XDSTROOT = $ARGV[0];
+my $XDSTROOT = Cwd::realpath($ARGV[0]);
 $ENV{'XDSTROOT'} = $XDSTROOT;
 
-my $SDKROOT = $ARGV[1];
+my $SDKROOT = Cwd::realpath($ARGV[1]);
 $ENV{'SDKROOT'} = $SDKROOT;
 
 my $BUILD_PRODUCTS_DIR = File::Spec->catdir($XDSTROOT, "obj$ARGV[2]", 'JavaScriptCore');
@@ -66,7 +66,7 @@ unless (-d $DERIVED_SOURCES_DIR) {
 chdir $DERIVED_SOURCES_DIR or die "Couldn't change directory to $DERIVED_SOURCES_DIR: $!";
 
 my $featureDefinesCommand = File::Spec->catfile($SDKROOT, 'tools', 'scripts', 'feature-defines.pl');
-my $featureDefines = `$featureDefinesCommand $SDKROOT $ARGV[2]`;
+my $featureDefines = `$featureDefinesCommand $SDKROOT windows`;
 chomp($featureDefines);
 $ENV{'FEATURE_DEFINES'} = $featureDefines;
 
